# challenger-bot

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/challenger_bot/: __init__.py
tests/: test_challenger_bot.py
