[tool.poetry]
name = "challenger_bot"
version = "0.1.0"
description = "An economy discord bot and platform for hosting wager matches"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
